# MacAtrium

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md
.github/workflows/: release.yml
assets/icons/: generate.py
builds/: 6.0.8-bw.json  6.0.8.json  7.1.json  7.5.5.json  GENERATED-BUILDS.md  RESUME.md  example.json  gen-6.0.8-1bit.json  gen-6.0.8-256color.json  gen-6.0.8-fullcolor.json  gen-7.1-1bit.json  gen-7.1-256color.json  gen-7.1-fullcolor.json  gen-7.5.5-1bit.json  gen-7.5.5-256color.json  gen-7.5.5-fullcolor.json  gen_configs.py
data/: README.md  catalog.jsonl  categories.jsonl  compatibility.jsonl  curated.jsonl  dependencies.json  donors.example.json  donors.json  library.jsonl  models.jsonl  os-tiers.json  overrides.jsonl  recommendations.md  targets.json  taxonomy.json  templates.json
data/collections/: Mac68KColorGames_v1.json  MacPack_BlackAndWhite.json
docs/: 00-vision.md  01-decisions.md  02-compatibility.md  03-architecture.md  04-toolchain-build.md  05-finder-replacement.md  06-content-pipeline.md  07-ui-ux.md  08-launching-system.md  09-roadmap.md  10-open-questions.md  11-derisk-log.md  12-mvp-handoff.md  13-handoff.md  13-iterate-session.md  14-art-render-snow-bug.md  15-settings-and-color-depth.md  16-startup-items.md  17-prefs-persistence.md  18-resume.md  19-multifinder-process-manager-spike.md  20-system6-multifinder-set-startup-on-disk.md  21-category-paging.md  22-resume.md  23-multi-volume-library.md  24-resume.md  25-resume.md  26-resume.md  27-classic-ui-redesign.md  28-resume.md  29-resume.md  30-resume.md  31-resume.md  32-color-depth-survey-plan.md  33-resume.md  34-resume.md  35-resume.md  36-image-forks-os-chooser-native-controls.md  37-multi-disk-libraries.md  38-compatibility-matrix.md  (+14 more)
installer/: macatrium-mgmt-ui.iss
spikes/launch-return/: CMakeLists.txt  README.md  main.c
spikes/startup-disk/: CMakeLists.txt  main.c
src/: art.c  art.h  artcaps.c  artcaps.h  bless.c  bless.h  catalog.c  catalog.h  cdswap.c  cdswap.h  compat.c  compat.h  controlpanels.c  controlpanels.h  cpu.c  cpu.h  display.c  display.h  env.c  env.h  json.c  json.h  launch.c  launch.h  mac_compat.h  macatrium-icon.r  macatrium.r  macfs.c  macfs.h  main.c  mem.c  mem.h  model.c  model.h  models.c  models.h  prefs.c  prefs.h  render.c  render.h  (+15 more)
tests/: Makefile  host_test.c
tools/: provision-sample-disk.sh
tools/atrium-gui/: Cargo.toml  README.md
tools/atrium-gui/src/: main.rs
tools/atrium-tool/: Cargo.toml  README.md  example-image.json
tools/atrium-tool/src/: catalog.rs  collections.rs  config.rs  donors.rs  enrich.rs  fetch.rs  harvest.rs  icons.rs  image.rs  lib.rs  library.rs  macroman.rs  main.rs  merge.rs  mg.rs  mgdb.rs  pict.rs  preflight.rs  rbcli.rs  resfork.rs  selection.rs  settings.rs  size_rsrc.rs  snd.rs  targets.rs  templates.rs  variants.rs
tools/compat-matrix/: .gitignore  README.md  build.sh  gen_artifact.py  merge.py
tools/compat-matrix/scrape/: A-compact-macii.jsonl  B-lc-aio.jsonl  C-centris-quadra-performa.jsonl  D-68k-powerbooks.jsonl  E-ppc-desktops.jsonl  F-ppc-laptops-g3g4.jsonl  G-imac-ibook.jsonl  H-clones-collapsed.jsonl
tools/macatrium-mgmt-ui/: Cargo.toml  README.md  RESUME.md
tools/macatrium-mgmt-ui/src/: main.rs
tools/macgarden-scraper/: README.md  mg.py  scrape.py
tools/qemu-harness/: README.md  q800_harness.py
tools/snow-harness/: README.md  assemble.sh  macatrium_harness.rs  test_catalog.jsonl
