[package]
name = "atrium"
version = "0.1.0"
edition = "2021"
description = "MacAtrium host build tooling: faceted catalog generation, PNG→PICT, app harvest, and bootable-image assembly. Pure Rust → builds on Mac/Windows/Linux for CI."

[[bin]]
name = "atrium"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
# preserve_order keeps dataset field order stable when `enrich` rewrites it.
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
# Input decoding only (PNG + JPEG); pure Rust, trimmed feature set.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Streaming XML for the (~500 MB) LaunchBox Metadata.xml — SAX-style, low memory.
quick-xml = "0.40"
# Native-Rust HTTP (rustls) for downloads — replaces shelling out to `curl`, so
# the tool has no external download dependency on Windows/macOS/Linux.
ureq = "3"

[profile.release]
opt-level = 2
