[package]
name = "macatrium-mgmt-ui"
version = "0.1.0"
edition = "2021"
description = "MacAtrium Management UI — an egui front-end over the atrium build library (the CLI stays the source of truth)."

[[bin]]
name = "macatrium-mgmt-ui"
path = "src/main.rs"

[dependencies]
eframe = "0.35"
rfd = "0.17"
serde_json = { version = "1", features = ["preserve_order"] }
# The CLI's logic, reused verbatim — every action the GUI takes is an atrium call.
atrium = { path = "../atrium-tool" }
# Image loaders for the title-picker box-art thumbnails (file:// + png/jpeg decode).
egui_extras = { version = "0.35", features = ["image", "file"] }
